Update- resume updated

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="column right">
                     <div class="text">I'm Harsh and I'm a <span class="typing-2"></span></div>
                     <p>I'm a tech enthusiast, a life time learner, a kind human and talking about my tech skills, so i'm a web developer, AI & ML learner UI/UX designer, Voice Over Artist, Mentee at Girl Code It, Internshala Student Partner, A Hustler, Winner of Prayas(NSS Prerna13), Loves to work with great peoples and learn from them, Pianist, and Sometimes a photographer.</p>
-                    <a target="_blank" href="https://drive.google.com/file/d/13Ipy6ouWRdeRsIyax_38dT5p0vZcm7py/view?usp=share_link">Download CV</a>
+                    <a target="_blank" href="https://drive.google.com/file/d/1-LanoFhWQDHqhUhO6FsQ6N9JxxqgEU_q/view?usp=sharing">Download CV</a>
                 </div>
             </div>
         </div>
