--- a/index.html
+++ b/index.html
@@ -205,39 +205,70 @@
         <div class="max-width">
             <h2 class="title">My projects</h2>
             <div class="carousel owl-carousel">
+                
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-6.png" alt="">
-                        <a style="color: white;" href="https://en.wikipedia.org/wiki/Ratan_Tata" class="text">Ratan Tata</a>
-                        <p>The most beloved and successful Indian industrialist.</p>
+                        <img src="images\mobile.png" alt="">
+                        <a style="color: white;" href="https://github.com/harshsharma101/Mobile-Details-Dashboard-for-Power-BI" class="text">Power BI</a>
+                        <p>Mobile Details Dashboard-to provide comprehensive insights for multiple companies.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-2.png" alt="">
-                        <a style="color: white;" href="https://en.wikipedia.org/wiki/Elon_Musk" class="text">Elon Musk</a>
-                        <p>Founder, CEO of SpaceX, CEO, and Product Architect of Tesla. </p>
+                        <img src="images\3d.png" alt="">
+                        <a style="color: white;" href="https://github.com/harshsharma101/my-3d-portfolio" class="text">HTML / CSS / Three.js / React.js</a>
+                        <p>My Fantastic 3D Portfolio Website with Three.js and React.js.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-3.png" alt="">
-                        <a style="color: white;" href="https://en.wikipedia.org/wiki/Jeff_Bezos" class="text">Jeff Bejos</a>
-                        <p>American entrepreneur, founder and executive chairman of Amazon.</p>
+                        <img src="images\color.jpg" alt="">
+                        <a style="color: white;" href="https://github.com/harshsharma101/Color-Detection-model-using-python" class="text">Python / OpenCV / Pandas</a>
+                        <p>Color Detection model - detects color of a specific pixel.</p>
+                    </div>
+                </div>   
+                <div class="card">
+                    <div class="box">
+                        <img src="images\hr.png" alt="">
+                        <a style="color: white;" href="https://github.com/harshsharma101/HR-Analytics-Power_BI" class="text">Power BI</a>
+                        <p>Dashboard for analytics of employees in a company, this is useful for HR department.</p>
+                    </div>
+                </div>
+                
+                <div class="card">
+                    <div class="box">
+                        <img src="images\smile.png" alt="">
+                        <a style="color: white;" href="https://github.com/harshsharma101/Smart-Selfie-Capture-via-Smile-Detection" class="text">Python</a>
+                        <p>Smart Selfie Capture - works by detecting Smile / facial expressions of a person.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-4.png" alt="">
-                        <a style="color: white;" href="https://en.wikipedia.org/wiki/Mahatma_Gandhi" class="text">Mahatma Gandhi</a>
-                        <p>Mohandas Karamchand Gandhi was an Indian lawyer, anti-colonial nationalist.</p>
+                        <img src="images\attendance.png" alt="">
+                        <a style="color: white;" href="https://github.com/harshsharma101/Classroom-Attendance-and-Attention-Analysis-System" class="text">Python/ HTML:5</a>
+                        <p>Classroom Attendance and Attention analysis System based on Facial Recognition. </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-5.png" alt="">
-                        <a style="color: white;" href="https://en.wikipedia.org/wiki/Narendra_Modi" class="text">Narendra Modi</a>
-                        <p>Narendra Damodardas Modi is an Indian politician serving as PM of India since 2014.</p>
+                        <img src="images\finance.png" alt="">
+                        <a style="color: white;" href="https://github.com/harshsharma101/Personal-Finance-Tracker--JavaScript--" class="text">HTML/ CSS/ JS</a>
+                        <p>Web based Personal Finance / budget Tracker.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="box">
+                        <img src="images\speech.png" alt="">
+                        <a style="color: white;" href="https://github.com/harshsharma101/Speech-Image-Discription-Using-YOLO-Technology" class="text">Python/ YOLOv8/ Kotlin</a>
+                        <p>Speech Image Description Using YOLO Technology.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images\windows.png" alt="">
+                        <a style="color: white;" href="https://github.com/harshsharma101/Windows-Man-in-the-Middle-Attack" class="text">Python </a>
+                        <p>Man in the middle attack with the help of Arp spoofing.</p>
                     </div>
                 </div>
             </div>
